[gd_scene load_steps=17 format=3 uid="uid://b04ihr446a3hq"]

[ext_resource type="Script" uid="uid://dpipja12nscsn" path="res://scenes/player/player.gd" id="1_8afob"]
[ext_resource type="Script" uid="uid://bobg7lxsemswa" path="res://scenes/player/smooth_camera_arm.gd" id="2_dovo2"]
[ext_resource type="PackedScene" uid="uid://bb2sub56dhiu2" path="res://scenes/player/rig.tscn" id="2_gmlin"]
[ext_resource type="PackedScene" uid="uid://bvi6hplbyh0f4" path="res://scenes/player/health_component.tscn" id="2_p47bc"]
[ext_resource type="Script" uid="uid://cvd2bg7ikyjiu" path="res://resources/character_stats.gd" id="2_qek5x"]
[ext_resource type="PackedScene" uid="uid://re0mkya8eb02" path="res://scenes/player/area_attack.tscn" id="3_75vfm"]
[ext_resource type="Script" uid="uid://chxicwlyfj2l1" path="res://scenes/player/attack_cast.gd" id="3_lvxji"]
[ext_resource type="PackedScene" uid="uid://7e1bsjgbqn4f" path="res://scenes/player/dash.tscn" id="7_0owmy"]
[ext_resource type="PackedScene" uid="uid://bttjcrebu3alf" path="res://scenes/user_interface/user_interface.tscn" id="9_5gtgg"]
[ext_resource type="Script" uid="uid://bxxn4s51y4bna" path="res://scenes/player/interaction_cast.gd" id="9_h17s1"]
[ext_resource type="PackedScene" uid="uid://d0km8kkrtklex" path="res://assets/spell_glyph/magic_ring2.gltf" id="11_fm80t"]
[ext_resource type="PackedScene" uid="uid://do6e0a0tof46e" path="res://assets/magic_ring_-_blue/magic_ring.gltf" id="11_je7p5"]

[sub_resource type="Resource" id="Resource_5gtgg"]
script = ExtResource("2_qek5x")
metadata/_custom_type_script = "uid://cvd2bg7ikyjiu"

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x7p2l"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dovo2"]
radius = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5gtgg"]
radius = 0.6

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 5
script = ExtResource("1_8afob")
stats = SubResource("Resource_5gtgg")
respawn_level = "uid://237qwmw7q0nt"

[node name="HealthComponent" parent="." node_paths=PackedStringArray("body") instance=ExtResource("2_p47bc")]
body = NodePath("..")
character_type = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_x7p2l")

[node name="SmoothCameraArm" type="SpringArm3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 0, 0)
shape = SubResource("SphereShape3D_dovo2")
spring_length = 4.0
script = ExtResource("2_dovo2")
target = NodePath("../HorizontalPivot/VerticalPivot")

[node name="Camera3D" type="Camera3D" parent="SmoothCameraArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 2.98023e-08, 1, 0, 0, 0)

[node name="HorizontalPivot" type="Node3D" parent="."]

[node name="VerticalPivot" type="Node3D" parent="HorizontalPivot"]

[node name="RigPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Dash" parent="RigPivot" node_paths=PackedStringArray("player") instance=ExtResource("7_0owmy")]
player = NodePath("../..")

[node name="Rig" parent="RigPivot" groups=["PlayerRig"] instance=ExtResource("2_gmlin")]

[node name="Skeleton3D" parent="RigPivot/Rig/CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(4.35084e-15, 0.907972, -0.0481736)
bones/0/rotation = Quaternion(0.12582, 1.18262e-07, 1.49989e-08, 0.992053)
bones/1/rotation = Quaternion(-0.0566577, -0.00072973, -0.0117082, 0.998325)
bones/2/position = Vector3(3.20474e-09, 0.146689, -1.95578e-08)
bones/2/rotation = Quaternion(0.00513164, -0.000303064, 0.00321191, 0.999982)
bones/3/position = Vector3(-2.01263e-09, 0.202058, -2.51457e-08)
bones/3/rotation = Quaternion(-0.0900905, -0.00029683, 0.00852396, 0.995897)
bones/4/position = Vector3(3.02934e-10, 0.0925562, 3.91155e-08)
bones/4/rotation = Quaternion(0.271316, 1.49223e-08, 9.04361e-08, 0.96249)
bones/5/rotation = Quaternion(-0.0948564, -2.80691e-14, -2.26155e-08, 0.995491)
bones/6/rotation = Quaternion(-0.163434, -1.17777e-07, -1.84531e-08, 0.986554)
bones/7/position = Vector3(-2.49734e-08, 0.907972, -0.0481735)
bones/7/rotation = Quaternion(-0.0863677, -0.751104, -0.383052, 0.530711)
bones/8/position = Vector3(-6.58413e-08, 0.907972, -0.0481735)
bones/8/rotation = Quaternion(-0.0863677, 0.751104, 0.383052, 0.530711)
bones/9/position = Vector3(0.131144, 0.974176, -0.0351291)
bones/9/rotation = Quaternion(0.99404, 0.0203567, -0.0311955, 0.102455)
bones/10/position = Vector3(-2.36129e-08, 0.26601, -2.14789e-08)
bones/10/rotation = Quaternion(-3.13921e-08, -0.000695086, 1.20449e-08, 1)
bones/11/position = Vector3(-4.6306e-08, 0.26601, 2.42145e-08)
bones/11/rotation = Quaternion(0.399589, -0.000696496, 0.000303734, 0.916694)
bones/12/position = Vector3(3.05151e-08, 0.22603, 5.03768e-08)
bones/12/rotation = Quaternion(-8.19226e-09, -0.00710644, 4.16102e-08, 0.999975)
bones/13/position = Vector3(-2.95495e-08, 0.22603, 2.68392e-09)
bones/13/rotation = Quaternion(-0.742742, 0.0118527, 0.0243677, 0.66903)
bones/14/position = Vector3(-3.05481e-08, 0.139877, 1.64787e-08)
bones/14/rotation = Quaternion(-9.66743e-05, 0.967474, -0.252972, -0.000383447)
bones/15/position = Vector3(-0.131144, 0.974176, -0.0351291)
bones/15/rotation = Quaternion(0.975357, -0.00536823, 0.0276094, 0.218835)
bones/16/position = Vector3(-1.10042e-08, 0.265705, -3.31989e-08)
bones/16/rotation = Quaternion(-3.43227e-08, 0.00314323, 8.33075e-10, 0.999995)
bones/17/position = Vector3(1.83545e-08, 0.265705, 6.98543e-10)
bones/17/rotation = Quaternion(0.425347, 0.00317981, -0.00149457, 0.905023)
bones/18/position = Vector3(1.2807e-08, 0.225719, -8.28774e-09)
bones/18/rotation = Quaternion(-2.29017e-08, -0.00785732, 3.30149e-08, 0.999969)
bones/19/position = Vector3(-1.27748e-08, 0.225719, 1.12004e-08)
bones/19/rotation = Quaternion(-0.679956, -0.0281484, -0.0013191, 0.732712)
bones/20/position = Vector3(-1.30142e-08, 0.139877, -2.77457e-09)
bones/20/rotation = Quaternion(-9.96472e-05, 0.967461, -0.253021, -0.000383039)
bones/21/position = Vector3(0.0251286, 1.43764, 0.0463783)
bones/21/rotation = Quaternion(-0.474371, -0.265715, -0.413907, 0.730102)
bones/22/position = Vector3(0.190975, 1.4762, -0.0123464)
bones/22/rotation = Quaternion(0.0261943, -0.163284, 0.975365, -0.146)
bones/23/position = Vector3(-5.41331e-09, 0.143946, -2.98023e-08)
bones/23/rotation = Quaternion(3.80346e-08, -0.0351819, 5.4742e-08, 0.999381)
bones/24/position = Vector3(-6.33301e-08, 0.143946, 4.3873e-08)
bones/24/rotation = Quaternion(0.342687, -0.0351827, -0.0213853, 0.938547)
bones/25/position = Vector3(1.30385e-08, 0.127601, 6.51926e-09)
bones/25/rotation = Quaternion(1.49943e-07, -1.20606e-07, 9.91859e-08, 1)
bones/26/position = Vector3(2.06034e-08, 0.127601, 2.42761e-08)
bones/26/rotation = Quaternion(-0.00824883, -0.00027077, -0.0328667, 0.999426)
bones/28/rotation = Quaternion(0.702583, -0.000939743, -0.00133552, 0.7116)
bones/29/rotation = Quaternion(0.741121, 0.00218291, 0.00265381, 0.671363)
bones/30/rotation = Quaternion(0.32527, 0.890055, 0.295977, -0.119997)
bones/31/rotation = Quaternion(0.514882, -0.114149, 0.114482, 0.841879)
bones/32/rotation = Quaternion(0.592003, -0.0381348, -0.090699, 0.799907)
bones/34/position = Vector3(-0.00316938, 0.0987206, 0.0147918)
bones/34/rotation = Quaternion(-0.0674699, 0.718446, 0.0663966, 0.689112)
bones/35/rotation = Quaternion(0.580803, -0.000892135, -0.0014975, 0.814042)
bones/36/rotation = Quaternion(0.682777, 0.00174509, 0.00256596, 0.73062)
bones/37/rotation = Quaternion(-0.00426514, 0.736714, 0.0394785, 0.675038)
bones/38/position = Vector3(-0.00622951, 0.0926415, -0.0236344)
bones/38/rotation = Quaternion(-0.109873, 0.743351, 0.0333507, 0.658973)
bones/39/rotation = Quaternion(0.630039, 0.00151959, 0.00237944, 0.776559)
bones/40/rotation = Quaternion(0.652643, -0.00308142, -0.00421108, 0.757648)
bones/41/rotation = Quaternion(-0.0684174, 0.72411, 0.0332337, 0.685478)
bones/42/position = Vector3(-0.00715362, 0.0679857, -0.0481983)
bones/42/rotation = Quaternion(-0.120913, 0.799109, 0.0358921, 0.587807)
bones/43/rotation = Quaternion(0.498693, -0.0202705, -0.0256953, 0.866161)
bones/44/rotation = Quaternion(0.715385, 0.035306, 0.0573145, 0.695481)
bones/45/rotation = Quaternion(-0.129059, 0.728936, -0.0250259, 0.67184)
bones/46/position = Vector3(-0.0113635, 1.43764, 0.0463782)
bones/46/rotation = Quaternion(-0.47805, 0.256809, 0.408287, 0.734043)
bones/47/position = Vector3(-0.175742, 1.47654, -0.0161151)
bones/47/rotation = Quaternion(-0.0222176, -0.145815, 0.97586, 0.161062)
bones/48/position = Vector3(1.88476e-07, 0.143946, 1.02445e-08)
bones/48/rotation = Quaternion(7.6033e-08, 0.049438, 9.7991e-08, 0.998777)
bones/49/position = Vector3(6.5191e-09, 0.143946, -1.95094e-08)
bones/49/rotation = Quaternion(0.382049, 0.0494387, 0.0283171, 0.922384)
bones/50/position = Vector3(-1.48779e-07, 0.1276, 5.9139e-08)
bones/50/rotation = Quaternion(-8.73115e-08, 2.7474e-08, -1.28057e-07, 1)
bones/51/position = Vector3(1.9461e-07, 0.127601, 6.06248e-08)
bones/51/rotation = Quaternion(-0.00824876, 0.000270832, 0.032867, 0.999426)
bones/52/rotation = Quaternion(-0.2563, 0.855859, 0.0299184, -0.448241)
bones/53/rotation = Quaternion(0.694912, 0.107145, -0.103549, 0.703488)
bones/54/rotation = Quaternion(0.74112, -0.00218237, -0.00265409, 0.671363)
bones/55/rotation = Quaternion(-0.325269, 0.890055, 0.295977, 0.119998)
bones/56/rotation = Quaternion(0.514882, 0.11415, -0.114483, 0.841879)
bones/57/rotation = Quaternion(0.592004, 0.0381346, 0.0906992, 0.799907)
bones/59/position = Vector3(0.00316943, 0.0987207, 0.0147917)
bones/59/rotation = Quaternion(0.138771, -0.704916, 0.15571, 0.677932)
bones/60/rotation = Quaternion(0.579984, 0.0462615, -0.0308755, 0.812727)
bones/61/rotation = Quaternion(0.682777, -0.00174718, -0.00256448, 0.73062)
bones/62/rotation = Quaternion(-0.00426532, -0.736714, -0.0394788, 0.675038)
bones/63/position = Vector3(0.00622955, 0.0926417, -0.0236344)
bones/63/rotation = Quaternion(0.104095, -0.719607, 0.186262, 0.660784)
bones/64/rotation = Quaternion(0.670693, 0.0163391, -0.0185663, 0.741323)
bones/65/rotation = Quaternion(0.692499, 0.00330364, 0.00403917, 0.7214)
bones/66/rotation = Quaternion(-0.0684178, -0.72411, -0.0332339, 0.685477)
bones/67/position = Vector3(0.00715371, 0.0679859, -0.0481984)
bones/67/rotation = Quaternion(0.108364, -0.768224, 0.166291, 0.608635)
bones/68/rotation = Quaternion(0.629954, 0.0295149, 0.0177509, 0.775869)
bones/69/rotation = Quaternion(0.816678, -0.0439534, -0.0509861, 0.573155)
bones/70/rotation = Quaternion(-0.12906, -0.728937, 0.0250258, 0.67184)
bones/71/position = Vector3(0.127191, 1.3582, -0.0247868)
bones/71/rotation = Quaternion(2.01346e-08, 0.600974, 0.799268, -4.59561e-08)
bones/72/position = Vector3(-0.113426, 1.3582, -0.0247868)
bones/72/rotation = Quaternion(2.01346e-08, 0.600974, 0.799268, -4.59561e-08)

[node name="RightHandBone" parent="RigPivot/Rig" index="2"]
transform = Transform3D(-0.962343, -0.270803, -0.0237126, 0.225025, -0.842518, 0.489415, -0.152513, 0.465649, 0.871728, -0.349559, 1.00715, 0.0195698)

[node name="LeftHandBone" parent="RigPivot/Rig" index="3"]
transform = Transform3D(-0.970513, 0.239108, 0.030521, -0.211236, -0.904633, 0.37016, 0.116119, 0.352798, 0.928466, 0.347785, 0.9907, -0.0144567)

[node name="RayAttachment" type="BoneAttachment3D" parent="RigPivot/Rig"]
transform = Transform3D(-0.962343, -0.270803, -0.0237126, 0.225025, -0.842518, 0.489415, -0.152513, 0.465649, 0.871728, -0.349559, 1.00715, 0.0195698)
bone_name = "DEF-hand.R"
bone_idx = 51
use_external_skeleton = true
external_skeleton = NodePath("../CharacterRig/GameRig/Skeleton3D")

[node name="AttackCast" type="RayCast3D" parent="RigPivot/Rig/RayAttachment"]
unique_name_in_owner = true
transform = Transform3D(-2.29287e-07, -9.58464e-08, 1, 0.996195, 0.087156, 2.36768e-07, -0.087156, 0.996195, 7.54979e-08, -0.0315893, 0.0769959, -0.00829244)
target_position = Vector3(0, 1.05, 0)
collision_mask = 8
script = ExtResource("3_lvxji")

[node name="AreaAttack" parent="RigPivot" instance=ExtResource("3_75vfm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
collision_mask = 8

[node name="InteractionCast" type="ShapeCast3D" parent="RigPivot" node_paths=PackedStringArray("ui", "player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_5gtgg")
target_position = Vector3(0, 0, 1)
collision_mask = 2
script = ExtResource("9_h17s1")
ui = NodePath("../../UserInterface")
player = NodePath("../..")

[node name="UserInterface" parent="." node_paths=PackedStringArray("player") instance=ExtResource("9_5gtgg")]
player = NodePath("..")

[node name="AttackCD" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="HealCD" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HealthRegenTimer" type="Timer" parent="."]

[node name="MagicRing2" parent="." instance=ExtResource("11_fm80t")]
transform = Transform3D(0.15, 0, 0, 0, -6.55671e-09, 0.15, 0, -0.15, -6.55671e-09, 0, -0.923462, 0)
visible = false

[node name="MagicRing" parent="." instance=ExtResource("11_je7p5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.4, 0)
visible = false

[connection signal="defeat" from="HealthComponent" to="." method="_on_health_component_defeat"]
[connection signal="health_changed" from="HealthComponent" to="UserInterface" method="update_health"]
[connection signal="heavy_attack" from="RigPivot/Rig" to="." method="_on_rig_heavy_attack"]

[editable path="RigPivot/Rig"]
[editable path="RigPivot/Rig/CharacterRig"]
